# resume_helper

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  smoke_test.py
data/: projects.json
resume_helper/: __init__.py  __main__.py  cli.py  config.py  gui.py  init_user.py  list_users.py  models.py
resume_helper/builder/: prompt_builder.py  resume_builder.py
resume_helper/data/: projects_db.py
resume_helper/import_projects/: __init__.py  __main__.py  cli.py  coverage_check.py  deduplicator.py  extractor.py
resume_helper/llm/: base.py  claude_provider.py  gemini_provider.py  openai_provider.py
resume_helper/output/: formatter.py  md2docx.py
resume_helper/parsers/: job_parser.py  pdf_parser.py
resumes/legacy/: pandoc_template.docx
shared/: pandoc_template.docx
shared/templates/project_focused_full_xyz/: system_prompt.md
shared/templates/project_focused_long/: system_prompt.md
shared/templates/project_focused_short/: pandoc_template.docx  system_prompt.md
shared/templates/project_focused_xyz/: system_prompt.md
users/jayne_dough/: projects.json
users/jayne_dough/resumes/enhanced/docx/: resume_fairy_land_inc_staff_fairy_scientist_20260221.docx  resume_the_silicon_grove_lower_canopy_annex_predictive_pastry_data_alchemist_20260222.docx
users/jayne_dough/resumes/enhanced/md/: resume_fairy_land_inc_staff_fairy_scientist_20260221.md  resume_the_silicon_grove_lower_canopy_annex_predictive_pastry_data_alchemist_20260222.md
