[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "resume-helper"
version = "0.1.0"
description = "CLI tool to tailor resumes to job postings using an LLM"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "anthropic>=0.28",
    "google-genai>=0.8",
    "openai>=1.0",
    "pydantic>=2.0",
    "instructor>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
resume-helper = "resume_helper.cli:main"
resume-helper-import-projects = "resume_helper.import_projects.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_helper*"]
