[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-helper"
version = "0.1.0"
description = "CLI tool to tailor resumes to job postings using an LLM"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "anthropic>=0.28",
    "google-genai>=0.8",
    "openai>=1.0",
    "pydantic>=2.0",
    "instructor>=1.0",
    "jsonref>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gui = ["gradio>=4.0"]

[project.scripts]
resume-helper = "resume_helper.cli:main"
resume-helper-app = "resume_helper.gui:main"
resume-helper-import-projects = "resume_helper.import_projects.cli:main"
resume-helper-init = "resume_helper.init_user:main"
resume-helper-users = "resume_helper.list_users:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_helper*"]
